# sqw

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  noop.txt  setup.sh
.github/workflows/: build-filon.yml
app/: core.py  math.py
data/cross_section_experiment/Esch/: data.json
data/molecular_dynamics/: h2o_293k_sqw_md.h5  h2o_293k_vdos.h5
notebooks/: hwhm_comparison.ipynb  load_gamma_data.ipynb  load_md_data.ipynb  sqw_qc_factor.ipynb
script/: helper.py  plot_correction_factor.py  plot_fft.py  plot_gamma.py  plot_sqw.py  plot_sqw_cls.py  plot_sqw_gaaqc.py  plot_sqw_md.py  plot_sqw_stack.py  save_data.py
scripts/: plot.py  plot_fft.py  plot_gamma.py  plot_stc_model.py  save_data.py  vdos2gamma.py
scripts/calculation/: cdft_stc_comparison.py  cross_section.py  fft_stc_comarison_q40.py  helper.py  sisf_qc_factor_q1.63.py  sqw_ga_2d.py  sqw_ga_fft_various_q.py  sqw_ga_q1.py  sqw_gaaqc_2d.py
scripts/plot/: cdft_stc_comarison_various_q.py  cross_section.py  fft_stc_comarison_q40.py  helper.py  sisf_qc_factor_1.63.py  sqw_ga_2d.py  sqw_ga_fft_various_q.py  sqw_ga_q1.py  sqw_gaaqc_2d.py  width_function.py
scripts/utils/: helper.py  io.py
src/filon/: CMakeLists.txt  README.md
src/filon/inc/: Filon.hh  ProgressMonitor.hh  Utils.hh  constants.hh
src/filon/src/: Filon.cc  ProgressMonitor.cc  Utils.cc
src/h2o_sqw_calc/: core.py  io.py  main.py  math.py  typing.py  utils.py
src/sqw/: __init__.py  _core.py  _math.py  consts.py  core.py  io.py  math.py  typing_.py  vdos2gamma.py
test/: test_arr_mul_dft.py  test_cdft.py  test_circular_convolve.py  test_ft.py  test_gen_cdft_gn_coeff.py  test_gen_self_n_circ_convolve.py  test_is_linspaced_array.py  test_is_linspaced_arrray.py
tests/: test_math.py
