[project]
name = "h2o-sqw-calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Haoran Jiang", email = "jianghr@ihep.ac.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.10.4",
]
