[project]
name = "h2o-sqw-calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Haoran Jiang", email = "jianghr@ihep.ac.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "ruff>=0.12.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # general
    "I",  # isort
    "E",  # pycodestyle (error)
    "F",  # pyflakes
    "UP",  # pyupgrade
    # more strict rules
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "FA",  # flake8-future-annotations
    "C90",  # mccabe
    "NPY",  # NumPy-specific rules
]

[tool.ruff.format]
docstring-code-format = true
