[project]
name = "sqw"
version = "0.1.0"
description = "New methodology for calulation of scattering function S(q,w)"
readme = "README.md"
authors = [
    { name = "Haoran Jiang", email = "jianghr@ihep.ac.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "ruff>=0.12.9",
]
script = [
    "h5py>=3.14.0",
    "matplotlib>=3.10.6",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # general
    "I",  # isort
    "D",  # pydocstyle
    "E",  # pycodestyle (error)
    "F",  # pyflakes
    "UP",  # pyupgrade
    # more strict rules
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "FA",  # flake8-future-annotations
    "C90",  # mccabe
    "N",  # pep-8 naming convention
    "NPY",  # NumPy-specific rules
]

[tool.ruff.lint.per-file-ignores]
"scripts/playground.py" = ["D"]

[tool.ruff.format]
docstring-code-format = true
